[package]
name = "exorcism"
version = "0.1.0"
authors = ["Bernard Cloutier <bernard.p.cloutier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1" }
specs = { version = "0.16.1" }
specs-derive = { version = "0.4.1" }
