[package]
name = "exorcism"
version = "0.1.0"
authors = ["Bernard Cloutier <bernard.p.cloutier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version ="0.8.1", default-features = false, features = ["opengl"] }
# bevy_ecs 0.5 doesn't expose event module
bevy_ecs = { path = "../../bevy/crates/bevy_ecs" }
fraction = "0.8.0"