[package]
name = "barbe-halle"
version = "0.1.0"
authors = ["Bernard Cloutier <bernard.p.cloutier@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version ="0.8.1", default-features = false, features = ["opengl"] }
bevy = { git = "https://github.com/BernardCloutier/bevy.git", features = ["dynamic"] }
fraction = "0.8.0"
ron = "0.6.5"
serde = "1.0.130"